# rosAuto

./: README.md  killGazebo
TP4_my_turtle_control/launch/: 1univers.launch  2univers.launch
TP5_drone_control/: package.xml
TP5_drone_control/launch/: drone_control.launch  mav_rpyt.launch
TP6_TurtleFollower/: CMakeLists.txt  package.xml
TP6_TurtleFollower/launch/: aleat.launch  follow.launch  follow_solution.launch
TP6_TurtleFollower/src/: follow.py
Test/: README.md
_PDF/: Planning_OARob_Autom.xlsx
attitude_estimation/bags/: no_motion.csv
attitude_estimation/launch/: KF_roll_imu_data_roll_only.launch
attitude_estimation/scripts/: KFPitchEstimation.py  KalmanFilter.py  husky_nav_solution.py
attitude_estimation/viz/: kf_roll_estimation.perspective
autom_demos/: CMakeLists.txt  package.xml
autom_demos/scripts/: inv_pendule.py  speed.py  speed_continu_discret.py
drone_control/: CMakeLists.txt  package.xml
drone_control/launch/: drone_control.launch
drone_control/scripts/: drone_control v3 (qui marche).py  drone_control.py
hello/src/: hello_script.py
my_turtle_control/: CMakeLists.txt  package.xml
my_turtle_control/src/: rond.py  (+1 more)
rpyt_publisher/: CMakeLists.txt  package.xml
talker_listener/: package.xml
tp4_my_turtle_control/: CMakeLists.txt  package.xml
tp5_drone_control/: CMakeLists.txt  package.xml
tp_solutions/: CMakeLists.txt  package.xml
urdf_model/: CMakeLists.txt  package.xml
urdf_model/launch/: display.launch
urdf_model/urdf/: poses.txt  robot_arm (copy).urdf  robot_arm.urdf  robot_fixed.urdf  robot_mobile.urdf
(+33 files in other folders)
