<package>
<name>urdf_model</name>
<version>0.0.1</version>

<description>This package contains a number of URDF models.</description>
<author></author>

<maintainer email="someone@gmail.com">Someone</maintainer>

<license>BSD</license>
<url>http://ros.org/wiki/urdf_tutorial</url>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roslaunch</build_depend>
<run_depend>controller_manager</run_depend>
<run_depend>diff_drive_controller</run_depend>
<run_depend>gazebo_ros</run_depend>
<run_depend>gazebo_ros_control</run_depend>
<run_depend>joint_state_controller</run_depend>
<run_depend>joint_state_publisher</run_depend>
<run_depend>position_controllers</run_depend>
<run_depend>pr2_description</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>rqt_robot_steering</run_depend>
<run_depend>rviz</run_depend>
<run_depend>urdf</run_depend>
<run_depend>xacro</run_depend>
</package>
